# 3mw-backend-service

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: development.Dockerfile  task.Dockerfile
src/3mw_backend_service/app/: celery.py  exceptions.py  settings.py  urls.py  wsgi.py
src/3mw_backend_service/backend/: tasks.py  utils.py
src/3mw_backend_service/backend/api/: routes.py
src/3mw_backend_service/backend/api/serializers/: __init__.py  datapoint.py  plant.py  reports.py
src/3mw_backend_service/backend/api/views/: __init__.py  datapoint.py  plant.py  report.py
src/3mw_backend_service/backend/migrations/: 0001_initial.py  0002_auto_20190827_1548.py  0003_auto_20190901_1337.py  0004_auto_20190901_1344.py  0005_auto_20190901_1359.py
src/3mw_backend_service/backend/models/: __init__.py  base.py  datapoint.py  plant.py
src/3mw_backend_service/backend/tests/: factories.py
src/3mw_backend_service/backend/tests/backend/: test_crud.py
